--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>Webpack-Express-Boilerplate</title>
+    <meta>
+    <title>Vue-Boilerplate</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <div id='app'></div>
