--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div id='app'></div>
-    <script src='vendor.bundle.js'></script>
+    <div id="app"></div>
+    <script src="vendor.bundle.js"></script>
     <script src="app.bundle.js"></script>
   </body>
 </html>
