--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta>
-    <title>Vue-Boilerplate</title>
+    <title>Wonderful Quotes</title>
+    <link href='https://fonts.googleapis.com/css?family=Arizonia' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
